--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,7 +1,4 @@
 /* write your override styles here */
-.tag-1 {
-    background: url(../images/tag-1.png) no-repeat;
-    z-index: 3;
-    /* display: block; */
-    display: inline;
+#wall .tag-1 {
+  display: none;
 }
