--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -3,7 +3,14 @@
   display: none;
 }
 
-#wall .tag-2{
+#wall .tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 980px;
+  height: 622px;
+}
+{
   
 }
 
